--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <nav id="desktop-nav">
@@ -49,7 +49,7 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Sudhanshu Kumar Swain </h1>
+        <h1 class="title new-heading-style">Sudhanshu Kumar Swain </h1>
         <p class="section__text__p2" id="auto-type"></p>
         <div class="btn-container">
           <button
@@ -138,13 +138,13 @@
         onclick="location.href='./#experience'"
       />
     </section>
-    <section id="experience" data-aos="fade-up" data-aos-duration="1200">
+    <section id="experience " data-aos="fade-up" data-aos-duration="1200">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">technical skills</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title skill-heading">Frontend Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -219,7 +219,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Backend Development</h2>
+            <h2 class="experience-sub-title skill-heading">Backend Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -300,151 +300,60 @@
         onclick="location.href='./#projects'"
       />
     </section>
-    <section id="projects" data-aos="fade-up" data-aos-duration="1200">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title" data-aos="fade-up" data-aos-delay="0">Projects</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container">
-            <div class="article-container" data-aos="fade-up" data-aos-delay="0">
-              <img
-                src="./assets/project-1.jpg"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">The Loop Cafe</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="window.open('https://sudhanshu-kumar-swain-02.github.io/The--Loop--Cafe-Website/', '_blank')"
-              >
-              Live Demo
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/Sudhanshu-kumar-swain-02/The--Loop--Cafe-Website', '_blank')"
-              >
-                Github
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container"data-aos="fade-up" data-aos-delay="0">
-              <img
-                src="./assets/project-2.jpg"
-                alt="Project 2"
-                class="project-img"
-              />
-            </div>
-            <h3 class="experience-sub-title project-title" data-aos="fade-up" data-aos-delay="0">FlyIndia</h3>
-            <div class="btn-container">
-              
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="window.open('https://sudhanshu-kumar-swain-02.github.io/Flyindia/', '_blank')"
-              >
-                Live Demo
-              </button>
+<section id="projects" data-aos="fade-up" data-aos-duration="1200">
+  <p class="section__text__p1">Browse My Recent</p>
+  <h1 class="title">Projects</h1>
 
-              <button
-                class="btn btn-color-2 project-btn"
-                 onclick="window.open('https://github.com/Sudhanshu-kumar-swain-02/Flyindia', '_blank')"
-              >
-                Github
-              </button>
-            </div>
-          </div>
+  <div class="projects-container">
 
+    <!-- Project 1 -->
+    <div class="project-card normal">
+      <img src="./assets/project-1.jpg" alt="Project 1" class="project-img" />
+      <h2>The Loop Cafe</h2>
+      <div class="btn-container">
+        <a href="https://sudhanshu-kumar-swain-02.github.io/The--Loop--Cafe-Website/"  target="_blank" rel="noopener noreferrer" class="btn">Live Demo</a>
+        <a href="https://github.com/Sudhanshu-kumar-swain-02/The--Loop--Cafe-Website"  target="_blank" rel="noopener noreferrer"  class="btn">GitHub</a>
+      </div>
+    </div>
 
-  <div class="details-container color-container">
-            <div class="article-container"data-aos="fade-up" data-aos-delay="0">
-              <img
-                src="./assets/project-3.jpg"
-                alt="Project 3"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title"data-aos="fade-up" data-aos-delay="0"> calculator using react js</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-              onclick="window.open('https://reactcalculatorapp01.netlify.app/', '_blank')"
-              >
-              Live Demo 
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-              onclick="window.open('https://github.com/Sudhanshu-kumar-swain-02/Calculator-by-React', '_blank')"
-              >
-                Github
-              </button>
-            </div>
-          </div>
+    <!-- Project 2 -->
+    <div class="project-card normal">
+      <img src="./assets/project-2.jpg" alt="Project 2" class="project-img" />
+      <h2>FlyIndia</h2>
+      <div class="btn-container">
+        <a href="https://sudhanshu-kumar-swain-02.github.io/Flyindia/"  target="_blank" rel="noopener noreferrer"  class="btn">Live Demo</a>
+        <a href="https://github.com/Sudhanshu-kumar-swain-02/Flyindia"  target="_blank" rel="noopener noreferrer"  class="btn">GitHub</a>
+      </div>
+    </div>
 
-
-
-
-            <div class="details-container color-container">
-            <div class="article-container" data-aos="fade-up" data-aos-delay="0">
-              <img
-                src="./assets/project-4.jpg"
-                alt="Project 2"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title" >MyCampus(Soon)</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Soon
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                <!-- onclick="window.open('https:https://reactcalculatorapp01.netlify.app/', '_blank')" -->
-              >
-                ---
-              </button>
-            </div>
-          </div>
-          
-
-
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-5.jpg"
-                alt="Project 3"
-                class="project-img"
-              />
-            </div>
-            <h3 class="experience-sub-title project-title">FlyIndia</h3>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
+    <!-- Project 3 -->
+    <div class="project-card normal">
+      <img src="./assets/project-3.jpg" alt="Project 3" class="project-img" />
+      <div class="overlay">
+        <h3>Calculator (React JS)</h3>
+        <div class="btn-container">
+          <a href="https://reactcalculatorapp01.netlify.app"  target="_blank" rel="noopener noreferrer"  class="btn">Live Demo</a>
+          <a href="https://github.com/Sudhanshu-kumar-swain-02/Calculator-by-React"  target="_blank" rel="noopener noreferrer"  class="btn">GitHub</a>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
-    </section>
+    </div>
+
+    <!-- Project 4 -->
+    <div class="project-card normal">
+      <img src="./assets/project-4.jpg" alt="Project 4" class="project-img" />
+      <div class="overlay">
+        <h3>MyCampus (Coming Soon)</h3>
+        <div class="btn-container">
+          <a href="#" class="btn">Live Soon</a>
+          <a href="#" class="btn">---</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
     <section id="contact">
   <p class="section__text__p1">Get in Touch</p>
   <h1 class="title">Contact Me</h1>
