--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-          onclick="window.open('https://www.linkedin.com/in/sudhanshu-kumar-swain-972863329/', '_blank')"
+          onclick="window.open('https://www.linkedin.com/in/sudhanshu-kumar-swain-972863329/, _blank')"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-          onclick="window.open('https:/https://github.com/Sudhanshu-kumar-swain-02,_blank')"
+          onclick="window.open('https://github.com/Sudhanshu-kumar-swain-02?tab=repositories/, _blank')"
           />
         </div>
       </div>
@@ -120,13 +120,13 @@
             </div>
           </div>
           <div class="text-container">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+            <p class="about-text">
+            🌟 I’m a passionate Full Stack Developer in the making, blending creativity with logical problem-solving.  <br>
+          📌 Skilled in HTML, CSS, JavaScript, React, and continuously exploring backend technologies. <br>
+        🎯 Currently pursuing MCA and working on projects that combine UI excellence with robust backend logic. <br>
+        ⚡ Strong interest in building scalable, user-focused applications with clean, maintainable code. <br>
+
+          ✅ My ultimate aim: Deliver impactful software solutions that make a difference.
             </p>
           </div>
         </div>
@@ -140,7 +140,7 @@
     </section>
     <section id="experience " data-aos="fade-up" data-aos-duration="1200">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">technical skills</h1>
+      <h1 class="title" id="experience">technical skills</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -358,6 +358,24 @@
   <p class="section__text__p1">Get in Touch</p>
   <h1 class="title">Contact Me</h1>
 
+
+  <!-- add social media -->
+
+    <div id="socials-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="My LinkedIn profile"
+            class="icon"
+          onclick="window.open('https://www.linkedin.com/in/sudhanshu-kumar-swain-972863329/, _blank')"
+          />
+          <img
+            src="./assets/github.png"
+            alt="My Github profile"
+            class="icon"
+          onclick="window.open('https://github.com/Sudhanshu-kumar-swain-02?tab=repositories/, _blank')"
+          />
+        </div>
+
   <div class="contact-form-container">
     <form action="https://formspree.io/f/xeozdwko" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
@@ -393,7 +411,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 Dev_X_Sudhanshu. All Rights Reserved.</p>
     </footer>
     <!-- AOS Library for scroll eff -->
      <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
